--- a/sydney.html
+++ b/sydney.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
 
   
    <title>Sídney, paraíso australiano.</title>
