--- a/sydney.html
+++ b/sydney.html
@@ -1101,6 +1101,10 @@ body {
     padding: 0 5px 0 5px;
   }
   
+  .number{
+    font-size: 100px;
+  }
+  
   .love_end img {
     width: 20%;
   }
