--- a/sydney.html
+++ b/sydney.html
@@ -1097,11 +1097,11 @@ body {
   .activity_intro p,
   .why_intro p,
   .end p {
- font-size: 20px;                      
+ font-size: 18px;                      
                      }                   
 
   .reason_info p {
-    width: auto;
+    width: 70vw;
   }
 
   .end h1,
