--- a/sydney.html
+++ b/sydney.html
@@ -1097,11 +1097,14 @@ body {
   .activity_intro p,
   .why_intro p,
   .end p {
- font-size: 18px;                      
-                     }                   
+ font-size: 18px;
+    width: 70vw;
+    }    
+                     
+                    
 
   .reason_info p {
-    width: 70vw;
+    width: auto;
   }
 
   .end h1,
