--- a/sydney.html
+++ b/sydney.html
@@ -1099,6 +1099,8 @@ body {
   .end p {
  font-size: 18px;
  width: 70%;
+    margin: 10px 0;
+    padding: 40px;
     }    
                                         
   .reason_info p {
