--- a/sydney.html
+++ b/sydney.html
@@ -1099,8 +1099,8 @@ body {
   .end p {
  font-size: 18px;
  width: 70%;
+    padding: 2.66667rem calc(50% - 300px);
     margin: 10px 0;
-    padding: 40px;
     }    
                                         
   .reason_info p {
