--- a/sydney.html
+++ b/sydney.html
@@ -1102,7 +1102,7 @@ body {
     }    
                                         
   .reason_info p {
-    padding: 2.66667rem calc(50% - 300px);
+    width: 70vw;
   }
 
   .end h1,
