--- a/sydney.html
+++ b/sydney.html
@@ -89,7 +89,7 @@
   <div id='places'>
     <h1>Lugares</h1>
     <div class='activity_intro'>
-    <p>Te recomendamos algunos de los mejores lugares de Sidney para que admires su belleza y grandeza. Déjate seducir por los edificios y monumentos de la gran ciudad que conseguirán dejarte con la boca abierta. Prometido.</p>
+    <p>Te recomendamos algunos de los mejores lugares de Sidney para que admires de su belleza y grandeza. Déjate seducir por los edificios y monumentos de la gran ciudad que conseguirán dejarte con la boca abierta. Prometido.</p>
     </div>
     <div class='activity_columns'>
       <div class='activity_column'>
@@ -99,7 +99,7 @@
       </div>
       <div class='activity_column'>
       <h4>Puerto de Sídney</h4>
-      <p>El famoso puerto a nivel mundial donde se encuentra lo más conocido y lo que convierte Sídney en la ciudad que es. Aquí se ubican la Casa de la Opera de Sídney y el Puente del Puerto de Sídney. Un espacio único donde disfrutar y admirar iconos de la arquitectura.
+      <p>El famoso puerto a nivel mundial donde se encuentra lo más conocido y lo que convierte a Sídney en la ciudad que es. Aquí se ubican la Casa de la Ópera de Sídney y el Puente del Puerto de Sídney. Un espacio único donde disfrutar y admirar iconos de la arquitectura.
       </p>
       </div>
       <div class='activity_column'>
@@ -109,13 +109,13 @@
       </div>
       <div class='activity_column'>
       <h4>Puerto Darling</h4>
-      <p>Puerto recreacional.  A una corta distancia del centro de la ciudad, podrás disfrutar de muchas atracciones, como el SEA LIFE Sydney Aquarium y el Wild Life Sydney Zoo; así como el Museo Marítimo Nacional de Australia.
+      <p>Puerto recreacional.  A una corta distancia del centro de la ciudad, podrás disfrutar de muchas atracciones, como el Acuario de Sídney y el Zoo de Sídney, así como el Museo Marítimo Nacional de Australia.
 
       </p>
       </div>
       <div class='activity_column'>
       <h4>Puerto Jackson</h4>
-      <p>El puerto original de Sídney. Es el lugar del primer asentamiento de los europeos en el continente. Puerto lleno de historia y celebraciones, como la celebración de la  Nochevieja de Sídney.
+      <p>El puerto original de Sídney. Es el lugar del primer asentamiento de los europeos en Australia. Puerto lleno de historia y actos , como la celebración de la  Nochevieja de Sídney.
 
       </p>
       </div>
@@ -157,7 +157,7 @@
       </p>
       </div>
       <div class='activity_column'>
-      <h4>Sea LIFE Sydney Aquarium</h4>
+      <h4>Acuario de Sídney</h4>
       <p>Descubre la mayor colección de vida marina australiana en el mundo y diviértete con todas las especies marinas que allí se encuentran. ¡Ah! Y atrévete a nadar con tiburones.
 
 
@@ -174,7 +174,7 @@
     <div class='activity_columns'>
       <div class='activity_column'>
       <h4>Bondi</h4>
-      <p>La playa mundialmente famosa se encentra a solo 8 km del centro de la ciudad y ofrece un sinfín de posibilidades. Surfea, diviértate en la arena, visita cafés, bares, mercados.. Bondi te permite tomar un baño siempre que quieras durante todo el año.
+      <p>La playa mundialmente famosa se encentra a solo 8 km del centro de la ciudad y ofrece un sinfín de posibilidades. Surfea, diviértate en la arena, visita cafés, bares, mercados... Bondi te permite tomar un baño siempre que quieras durante todo el año.
 
       </p>
       </div>
@@ -264,7 +264,7 @@
     <div class='activity_columns'>
       <div class='activity_column'>
       <h4>Golf</h4>
-      <p> Puedes jugar al Golf en numerosos espacios en Sídney, como por ejemplo Riverside Oaks, a una hora de Sídney ; en resorts o el Valle Hunter. Un deporte al alcance de todos.</p>
+      <p> Puedes jugar al Golf en numerosos espacios en Sídney, como por ejemplo Riverside Oaks, a una hora de Sídney, en resorts o el Valle Hunter. Un deporte al alcance de todos.</p>
       </div>
       <div class='activity_column'>
       <h4>Surf</h4>
@@ -298,15 +298,15 @@
     <div class='activity_columns'>
       <div class='activity_column'>
       <h4>Casa de la Ópera</h4>
-      <p>La Casa de la Opera de Sídney es arquitectura y cultura por igual. Aquí puedes encontrar maravillosos espectáculos de numerosas artes escénicas. Disfruta de la cultura en el mejor edificio.</p>
+      <p>La Casa de la Ópera de Sídney es arquitectura y cultura por igual. Aquí puedes encontrar maravillosos espectáculos de numerosas artes escénicas. Disfruta de la cultura en el mejor edificio.</p>
       </div>
       <div class='activity_column'>
       <h4>Museo Australiano</h4>
-      <p>Este museo cuenta con numerosas colecciones dedicadas a la cultura y la ciencia natural, como dinosaurios y la fauna salvaje australana.</p>
+      <p>Este museo cuenta con numerosas colecciones dedicadas a la cultura y la ciencia natural, como dinosaurios y la fauna salvaje australiana.</p>
       </div>
       <div class='activity_column'>
       <h4>Museo Nacional Marítimo</h4>
-      <p> Descubre la historia naval de Australia mientras exploras un submarino, un destructor y una réplica de un barco del siglo 18.  </p>
+      <p> Descubre la historia naval de Australia mientras exploras un submarino, un destructor y una réplica de un barco del siglo XVIII.  </p>
       </div>
       <div class='activity_column'>
       <h4>Museo PowerHouse</h4>
@@ -314,7 +314,7 @@
       </div>
       <div class='activity_column'>
       <h4>Museo Bradman</h4>
-      <p> SI te gusta el cricket, este es tu museo. Aprende todo sobre la historia y datos de este deporte en Australia de la mano de la tecnología del museo.</p>
+      <p> SI te gusta el críquet, este es tu museo. Aprende todo sobre la historia y datos de este deporte en Australia de la mano de la tecnología del museo.</p>
       </div>
       </div>
       </div>
@@ -326,7 +326,7 @@
     <div class='activity_columns'>
       <div class='activity_column'>
       <h4>Quay</h4>
-      <p>Destaca por su magnífica ubicación entre el Puerto de Sídney y la Casa de la Ópera, su comida también es fabulosa. Disfruta de la famosa tarta de chocolate.</p>
+      <p>Destaca por su magnífica ubicación entre el Puerto de Sídney y la Casa de la Ópera y su comida es fabulosa. Disfruta de la famosa tarta de chocolate.</p>
       </div>
       <div class='activity_column'>
       <h4>Opera Bar</h4>
@@ -354,14 +354,14 @@
     <span class='number'>1</span>
       <div class='reason_info'>
         <h4>Sídney es única.</h4>
-        <p>Es una ciudad majestuosa e irrepetible por sus edificios con un estilo propio, monumentos convertidos en iconos a nivel mundial, lugares que despiertan emociones… Sídney es una ciudad que no tiene ningúna comparación con otra ciudad. Es única y un  tesoro que querrás recorrer una y otra vez. Y todas las veces serán como si fuese  la primera. Sídney siempre sorprende, atrapa y enamora.</p>
+        <p>Es una ciudad majestuosa e irrepetible por sus edificios con un estilo propio, monumentos convertidos en iconos a nivel mundial, lugares que despiertan emociones… Sídney es una ciudad que no tiene comparación a nivel mundial. Es única y un  tesoro que querrás recorrer una y otra vez. Y todas las veces serán como si fuese  la primera. Sídney siempre sorprende, atrapa y enamora.</p>
     </div>
   </div>
   <div class='reason'>
     <span class='number'>2</span>
       <div class='reason_info'>
         <h4>Sídney es un paraíso.</h4>
-        <p>Sídney es un paraíso natural. La misma ciudad es un oasis de naturaleza  a ambos lados de las construcciones humanas. Las increíbles y míticas playas donde encontrarte a ti mismo y deleitarse con todos tus sentidos. El buen tiempo que permite una vida al aire libre casi todo el año y sumergirte en el mar… Sídney es el paraíso en la Tierra, y hay tantos motivos como gotas de agua en el mar.</p>
+        <p>Sídney es un paraíso natural. La misma ciudad es un oasis de naturaleza  a ambos lados de las construcciones humanas. Las increíbles y míticas playas donde encontrarte a ti mismo y deleitarse con todos tus sentidos. El buen tiempo que permite una vida al aire libre casi todo el año y sumergirte en el mar… Sídney es el paraíso en la Tierra, y hay tantos motivos como gotas de agua en el océano.</p>
     </div>
   </div>
  <div class='reason'>
@@ -375,7 +375,7 @@
     <span class='number'>4</span>
       <div class='reason_info'>
         <h4>Australia</h4>
-        <p>Australia es toda una razón en sí misma para enamorarte de Sídney. País de naturaleza salvaje, animales únicos y vida diferente.  País enorme, único y con gente asombrosa. País de extremos, de belleza inigualable y de mentalidad propia. Australia es un mundo aparte y un nuevo horizonte que visitar. Bienvenido a Australia.</p>
+        <p>Australia es toda una razón en sí misma para enamorarte de Sídney. País de naturaleza salvaje, animales exclusivos y vida diferente.  País enorme, único y con gente asombrosa. País de extremos, de belleza inigualable y de mentalidad propia. Australia es un mundo aparte y un nuevo horizonte que visitar. Bienvenido a Australia.</p>
     </div>
   </div>
   </div>
