--- a/sydney.html
+++ b/sydney.html
@@ -1097,8 +1097,8 @@ body {
   .activity_intro p,
   .why_intro p,
   .end p {
-    font-size: 18px;
-    padding: 2.66667rem calc(50% - 300px);
+    font-size: 17px;
+    margin: 0 30px;
     }    
                                         
   .reason_info p {
