--- a/index.html
+++ b/index.html
@@ -390,6 +390,11 @@
   <h1>Sídney</h1>
 </div>
 </div>
+  <footer>
+    <small>© José Ángel 2022</small>
+</footer>
+
+
 
 <script src="sydney.js"></script> 
 </html>
