--- a/index.html
+++ b/index.html
@@ -6,10 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
   <link rel="stylesheet" href="sydney.css">
-  <script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
-
-  
-   <title>Sídney, paraíso australiano.</title>
+  <title>Sídney, paraíso australiano.</title>
   
 </head>
   
@@ -390,11 +387,16 @@
   <h1>Sídney</h1>
 </div>
 </div>
+<div class="pie nombre">
+  <a class="inline" href="https://joseangel-mad.github.io/joseangel/" target="_blank" 
+  rel="noopener noreferrer">José Ángel</a>
+</div>
+
   <footer>
 <!--     <small>© José Ángel 2023</small> -->
 </footer>
 
 
-
+<script src="https://code.jquery.com/jquery-1.10.1.min.js"></script>
 <script src="sydney.js"></script> 
 </html>
