Corrección de errores

--- a/index-en.html
+++ b/index-en.html
@@ -178,6 +178,7 @@
     <div class='activity_columns'>
       <div class='activity_column'>
       <h4>Luxury Hotels</h4>
+      <p>The views of Sydney Harbour are incredible. Enjoy them with hotels like Four Seasons Hotel Sydney, Shangri-La Hotel Sydney, and InterContinental Sydney.</p>
       </div>
       <div class='activity_column'>
       <h4>Sydney Besparke Tour</h4>
@@ -242,7 +243,7 @@
       </div>
       <div class='activity_column'>
       <h4>Thunder Jet Boat</h4>
-      Board a motor boat on Sydney Harbour and enjoy the experience as the boat drifts through the water at full speed. A unique adventure.  
+      <p>Board a motor boat on Sydney Harbour and enjoy the experience as the boat drifts through the water at full speed. A unique adventure.</p>  
       </div>
       <div class='activity_column'>
       <h4>Skiing</h4>
